<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ff542437"
    >
	<TextView
		android:id="@+id/intro_text_1"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:layout_marginTop="-40dp"
	    android:layout_marginBottom="-40dp"
	    android:layout_marginLeft="-18dp"
	    android:textSize="128dp"
	    android:textStyle="bold"
	    android:textColor="#ffecd078"
	    android:text="@string/intro_text_1"
	    />
	<TextView  
	    android:id="@+id/intro_text_2"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:layout_below="@id/intro_text_1"
	   	android:layout_marginTop="-40dp"
	    android:layout_marginBottom="-40dp"
	    android:layout_marginLeft="-18dp"
	    android:textSize="128dp"
	    android:textStyle="bold"
	    android:textColor="#ffecd078" 
	    android:text="@string/intro_text_2"
	    />
	<TextView  
	    android:id="@+id/intro_text_3"
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentRight="true" 
	    android:textSize="48dp"
	    android:textColor="#ff53777a"
	    android:text="@string/intro_text_3"
	    />    
</RelativeLayout>
